--- a/serverpackcreator-web/src/test/resources/application.properties
+++ b/serverpackcreator-web/src/test/resources/application.properties
@@ -11,19 +11,21 @@ spring.output.ansi.enabled=ALWAYS
 server.error.include-message=ALWAYS
 server.error.include-stacktrace=ALWAYS
 spring.application.name=ServerPackCreator
-spring.datasource.url=jdbc:sqlite:serverpackcreator.db
-spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.sqlite.hibernate.dialect.SQLiteDialect
 spring.jpa.open-in-view=false
 spring.jdbc.template.query-timeout=3600
+spring.datasource.tomcat.max-active=50
+spring.datasource.tomcat.max-idle=15
+spring.datasource.tomcat.min-idle=8
 spring.transaction.default-timeout=3600
 spring.artemis.mode=embedded
 spring.artemis.embedded.persistent=false
 spring.artemis.embedded.data-directory=work/artemis
-spring.datasource.tomcat.max-active=50
-spring.datasource.tomcat.max-idle=15
-spring.datasource.tomcat.min-idle=8
 spring.servlet.multipart.max-file-size=500MB
 spring.servlet.multipart.max-request-size=500MB
 spring.config.import=classpath:application.properties,classpath:serverpackcreator.properties,file:./src/test/resources/serverpackcreator.properties
