--- a/serverpackcreator-api/src/jvmMain/resources/serverpackcreator.properties
+++ b/serverpackcreator-api/src/jvmMain/resources/serverpackcreator.properties
@@ -24,3 +24,30 @@ de.griefed.serverpackcreator.minecraft.snapshots=false
 de.griefed.serverpackcreator.serverpack.autodiscovery.filter=START
 de.griefed.serverpackcreator.java=
 de.griefed.serverpackcreator.script.java.autoupdate=true
+server.port=8080
+server.error.whitelabel.enabled=false
+server.tomcat.basedir=
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.directory=logs
+server.tomcat.accesslog.file-date-format=_yyyy-MM-dd
+server.tomcat.accesslog.prefix=tomcat_access
+server.tomcat.accesslog.suffix=.log
+server.tomcat.accesslog.pattern=common
+spring.output.ansi.enabled=ALWAYS
+server.error.include-message=ALWAYS
+server.error.include-stacktrace=ALWAYS
+spring.application.name=ServerPackCreator
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.open-in-view=false
+spring.jdbc.template.query-timeout=3600
+spring.datasource.tomcat.max-active=50
+spring.datasource.tomcat.max-idle=15
+spring.datasource.tomcat.min-idle=8
+spring.transaction.default-timeout=3600
+spring.servlet.multipart.max-file-size=5000MB
+spring.servlet.multipart.max-request-size=5000MB
+spring.jpa.properties.hibernate.jdbc.use_streams_for_binary=true
